# axum-oauth2-template

./: .gitignore  Cargo.toml  Notes.md  README.md  config.dev.toml  config.prod.toml
src/: error.rs  main.rs
src/auth/: mod.rs  models.rs.bak
src/auth/config/: mod.rs  oauth.rs
src/auth/handlers/: google.rs  session.rs
src/auth/middleware/: mod.rs
src/auth/models/: oauth.rs  session.rs  user.rs
src/settings/: mod.rs
src/state/: mod.rs
