[package]
name = "sosplanning"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
bb8 = "0.8"
bb8-postgres = "0.8"
tokio-postgres = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.41"
serde = { version = "1.0", features = ["derive"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
time = "0.3"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4.38"
anyhow = "1.0.93"
oauth2 = "4.4.2"
async-sqlx-session = { version = "0.4.0", features = ["pg"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
async-session = "3.0.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dotenvy = "0.15.7"
